# petiteutf8

./: .gitmodules  CMakeLists.txt  Example.cpp  LICENSE  README.md
PetiteUtf8/: PetiteUtf8.cmake  PetiteUtf8.srcs.cmake
PetiteUtf8/Source/: PetiteUtf8.hpp
PetiteUtf8Test/: PetiteUtf8Test.cmake  PetiteUtf8Test.srcs.cmake
PetiteUtf8Test/Source/: RandomString.hpp  Unicode.hpp
PetiteUtf8Test/Source/Test/: DecodeTest.cpp  EncodeTest.cpp  Main.cpp
